# BotCommander

./: .gitignore  ChangeLog  Makefile.am  Makefile.in  README  TODO  autogen.sh  config.h.in  configure.ac  configure.in  create_source_htmls  rules.in  template
data/: Makefile.in  botcommander.desktop.in.in  botcommander.schemas.in
debian/: README.Debian  botcommander-default.ex  botcommander.doc-base.EX  changelog  control  copyright  cron.d.ex  dirs  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
doc/: Makefile.in  botcommander.texinfo  botcommander.xml  version.texinfo
eggdrop/: botcommander.tcl
gentoo/net-misc/botcommander/: ChangeLog  Manifest  botcommander-1.0.ebuild  metadata.xml
gentoo/net-misc/botcommander/files/: digest-botcommander-1.0
include/: defines.h  functions.h  typedefs.h  variables.h
m4/: ChangeLog
pixmaps/: Makefile.in
po/: BotCommander.pot  ChangeLog  Makefile.in.in  Makevars  POTFILES.in  botcommander.pot  hu.po
src/: Makefile.am  Makefile.in  about.c  botlist.c  bots.c  callbacks.c  chanprops.c  commands.c  config.c  debug.c  history.c  main.c  networking.c  setup.c  string.c  tabs.c  widgets.c
