PACKAGE=botcommander
VERSION=0.1.0

AC_INIT([botcommander], [0.1.0])
AC_CONFIG_HEADER([config.h])
AC_CONFIG_SRCDIR([configure.ac])
AM_INIT_AUTOMAKE($PACKAGE, $VERSION)
AM_GNU_GETTEXT([external])

AC_DEFINE_UNQUOTED(PACKAGE, "$PACKAGE")
AC_DEFINE_UNQUOTED(VERSION, "$VERSION")
AC_SUBST(PACKAGE)
AC_SUBST(VERSION)

PKG_PROG_PKG_CONFIG
PKG_CHECK_MODULES(GTK, gtk+-3.0)

AC_SUBST(BCREQ_CFLAGS)
AC_SUBST(BCREQ_LIBS)

AC_PROG_CC

AC_OUTPUT([Makefile src/Makefile po/Makefile.in])

