AC_PREREQ(2.60)
AC_INIT(BotCommander, 1.0, polesz@botcommander.hu)
AM_INIT_AUTOMAKE

PACKAGE=botcommander
BOTCOMMANDER_VERSION=1.0
ALL_LINGUAS=hu
GETTEXT_PACKAGE=botcommander

GLIB_REQUIRED=2.0.6
GDK_PIXBUF_REQUIRED=2.0.0
GTK_REQUIRED=2.2.0
GNOME_REQUIRED=2.0.2
GNOME_UI_REQUIRED=2.0.2
VTE_REQUIRED=0.9.0

AC_GNU_SOURCE
AM_GNU_GETTEXT
AM_GLIB_GNU_GETTEXT

AC_SUBST(GLIB_REQUIRED)
AC_SUBST(GDK_PIXBUF_REQUIRED)
AC_SUBST(GTK_REQUIRED)
AC_SUBST(GNOME_REQUIRED)
AC_SUBST(GNOME_UI_REQUIRED)
AC_SUBST(VTE_REQUIRED)
AC_SUBST(GETTEXT_PACKAGE)
AC_SUBST(PACKAGE)

AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [GETTEXT package name])

if test "x${prefix}" = "xNONE"; then
	packageprefix=${ac_default_prefix}
else
	packageprefix=${prefix}
fi

if test "x${prefix}" = "xNONE"; then
	AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${ac_default_prefix}/${DATADIRNAME}/locale", [Package local directory])
else
	AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${prefix}/${DATADIRNAME}/locale", [Package local directory])
fi

packagepixmapsdir=share/pixmaps/${PACKAGE}

PACKAGE_PIXMAPS_DIR="${packageprefix}/${packagepixmapsdir}"
AC_SUBST(PACKAGE_PIXMAPS_DIR)

AC_DEFINE_UNQUOTED(PACKAGE_PIXMAPS_DIR, "${packageprefix}/${packagepixmapsdir}", [Package pixmaps directory])

AC_CONFIG_HEADER([config.h])

AC_ARG_ENABLE(debug, [  --enable-debug          Enable debug mode], CFLAGS="$CFLAGS -DDEBUG -g -Wall")

dnl Check for required programs
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
IT_PROG_INTLTOOL
AC_CHECK_PROGS([TEXI2PDF], [texi2pdf])

dnl Check for extensions
AC_OBJEXT
AC_EXEEXT

dnl Check for math library
AC_CHECK_LIB([m], [exp10])
AC_ISC_POSIX

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([fcntl.h libintl.h locale.h netdb.h netinet/in.h stdlib.h string.h sys/socket.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SSIZE_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_TYPE_SIGNAL
AC_CHECK_FUNCS([gethostbyname memset setlocale socket strchr strerror strtol])

PKG_PROG_PKG_CONFIG([0.9.0])

if test x$PKG_CONFIG = xno; then
	AC_MSG_ERROR(Please install the pkg-config package!);
fi

PKG_CHECK_MODULES(BOTCOMMANDER, glib-2.0 >= $GLIB_REQUIRED gtk+-2.0 >= $GTK_REQUIRED libgnome-2.0 >= $GNOME_REQUIRED libgnomeui-2.0 >= $GNOME_REQUIRED vte >= $VTE_REQUIRED gconf-2.0)

AC_SUBST(BOTCOMMANDER_CFLAGS)
AC_SUBST(BOTCOMMANDER_LIBS)

AM_GCONF_SOURCE_2

AC_PATH_PROG([GCONFTOOL], [gconftool-2], [no])
if test "x$GCONFTOOL" = "xno"; then
        AC_MSG_ERROR([gconftool-2 executable not found in your path - should be installed with GConf])
fi

AC_CONFIG_FILES([rules
		 Makefile
		 data/Makefile
                 doc/Makefile
                 src/Makefile
		 pixmaps/Makefile
		 po/Makefile.in
		 data/botcommander.desktop.in
		 data/botcommander.schemas])
AC_OUTPUT
